fix weird text cutoff spotted by Lil Willy

--- a/page_style.css
+++ b/page_style.css
@@ -384,7 +384,6 @@ img {
 }
 
 .sensor-title {
-    width: 38%;
     text-align: center;
 }
 
